sumo/tests/duarouter/errors/no_output/options.duarouter
--net-file=input_net.net.xml --trip-files=increasing_trips.trips.xml
